fixed bug objects not showing on first click + breadcrumb idea

--- a/src/app/css/style.css
+++ b/src/app/css/style.css
@@ -168,8 +168,8 @@ p.weight3 {
     border-radius: 8px;
     -webkit-box-shadow: 0 0 4px #000;
     box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.6);
-    width: auto;;
-    height: 500px;
+    width: 300px;;
+    height: 412px;
 }
 
 
